--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,60 +10,63 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RNG">
         <activity
+            android:name=".DisplayLeaderBoard"
+            android:exported="true" />
+        <activity
             android:name=".pages.HomePage"
+            android:configChanges="orientation|keyboardHidden"
             android:exported="true"
-            android:screenOrientation="landscape"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".pages.RegisterPage"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ReactionDifficultyPage"
-            android:screenOrientation="landscape"
             android:configChanges="orientation|keyboardHidden"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".pages.HelpPage"
+            android:configChanges="orientation|keyboardHidden"
             android:exported="true"
-            android:screenOrientation="landscape"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:screenOrientation="landscape" />
         <activity
-            android:name=".pages.LeaderboardPage"
+            android:name=".pages.LeaderboardPageSelection"
+            android:configChanges="orientation|keyboardHidden"
             android:exported="true"
-            android:screenOrientation="landscape"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".ReactionGame"
+            android:configChanges="orientation|keyboardHidden"
             android:exported="true"
-            android:screenOrientation="landscape"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".TrailMakingTest"
+            android:configChanges="orientation|keyboardHidden"
             android:exported="true"
-            android:screenOrientation="landscape"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".MemoryGame"
+            android:configChanges="orientation|keyboardHidden"
             android:exported="true"
-            android:screenOrientation="landscape"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".MemoryGameDifficulty"
+            android:configChanges="orientation|keyboardHidden"
             android:exported="true"
-            android:screenOrientation="landscape"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".TrailMakingTestDifficultyPage"
+            android:configChanges="orientation|keyboardHidden"
             android:exported="true"
-            android:screenOrientation="landscape"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".pages.LoginPage"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
