--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
             android:name=".DisplayLeaderBoard"
             android:exported="true" />
         <activity
+            android:name=".DisplayHealthTracker"
+            android:exported="true" />
+        <activity
             android:name=".pages.HomePage"
             android:configChanges="orientation|keyboardHidden"
             android:exported="true"
@@ -34,6 +37,11 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".pages.LeaderboardPageSelection"
+            android:configChanges="orientation|keyboardHidden"
+            android:exported="true"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".HealthTrackerPage"
             android:configChanges="orientation|keyboardHidden"
             android:exported="true"
             android:screenOrientation="landscape" />
