--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
             android:exported="true"
             android:screenOrientation="landscape"/>
         <activity
+            android:name=".pages.FaqPage"
+            android:exported="true"
+            android:screenOrientation="landscape"/>
+        <activity
             android:name=".pages.HomePage"
             android:configChanges="orientation|keyboardHidden"
             android:exported="true"
